--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,10 +15,12 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set Up Rust
-      uses: actions/setup-rust@v1
+      uses: actions-rs/toolchain@v1  # This is an alternative to actions/setup-rust
       with:
-        rust-version: stable
+        toolchain: stable
 
     - name: Build, Test, and Run
       run: |
+        cargo build --verbose
+        cargo test --verbose
         cargo run  # Add any additional run options as needed
